Fix bug with header disapperaring on mobile devices

--- a/src/styles/Gallery.scss
+++ b/src/styles/Gallery.scss
@@ -9,13 +9,13 @@ body,
     padding: 0;
     font-family: sans-serif;
     height: 100%;
+    overflow: hidden;
 }
 
 header {
     font-size: calc(10px + 2vmin);
     color: #000;
-    display: flex;
-    place-content: center;
+    text-align: center;
 
     h1 {
         font-weight: 300;
@@ -23,16 +23,18 @@ header {
 }
 
 .gallery-wrapper {
+    overflow: scroll;
+    scroll-behavior: smooth;
+    height: 100%;
     opacity: 0;
     transition: ease 1s;
     transform: translateY(20px);
     display: flex;
     flex-direction: column;
-    height: 100%;
 
     &.mounted {
         opacity: 1;
-        transform: initial;
+        transform: translateY(0);
     }
 }
 
@@ -44,6 +46,7 @@ header {
     display: grid;
     box-sizing: border-box;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-rows: auto;
 
     @media screen and (min-width: $bp-s) and (max-width: $bp-m) {
         padding: 0 2rem 2rem 2rem;
@@ -59,17 +62,18 @@ header {
     position: relative;
     color: rgba(0, 0, 0, 0);
     display: flex;
+    height: 35vh;
+
+    @media screen and (max-width: $bp-m) {
+        height: 40vh;
+    }
 
     img {
         margin: 0;
         width: 100%;
-        height: 35vh;
+        height: 100%;
         object-fit: cover;
         transition: 0.15s ease-in-out;
-
-        @media screen and (max-width: $bp-m) {
-            height: 40vh;
-        }
     }
 
     h2 {
@@ -84,7 +88,7 @@ header {
     }
 
     &::after {
-        transition: ease 0.2s;
+        transition: background-color ease 0.2s;
         position: absolute;
         top: 0;
         left: 0;
@@ -94,114 +98,26 @@ header {
         background-color: rgba(0, 0, 0, 0);
     }
 
-    &:hover {
-        cursor: pointer;
+    @media (hover: hover) and (pointer: fine) {
+        &:hover {
+            cursor: pointer;
+            color: rgba(255, 255, 255, 1);
+
+            &::after {
+                background-color: rgba(0, 0, 0, 0.5);
+            }
+        }
+    }
+
+    // @media (hover: none) and (pointer: coarse) {
+    &.mobile-focus {
         color: rgba(255, 255, 255, 1);
 
         &::after {
             background-color: rgba(0, 0, 0, 0.5);
         }
     }
-}
-
-.fullscreen {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 100vh;
-    width: 100vw;
-    transition: ease 350ms;
-
-    &.show {
-        opacity: 1;
-        z-index: 999;
-        display: visible;
-        transition: ease 250ms;
-    }
-
-    &.hide {
-        z-index: -1;
-        opacity: 0;
-        // display: none;
-    }
-
-    &.enter {
-        opacity: 1;
-    }
-
-    img {
-        margin: auto;
-        top: 0;
-        bottom: 0;
-        height: 100%;
-        object-fit: cover;
-        width: auto;
-        max-width: 100vw;
-
-        @media screen and (min-width: $bp-s) and (max-width: $bp-m) {
-            height: auto;
-            min-height: 75vh;
-            width: 100%;
-        }
-
-        @media screen and (max-width: $bp-s) {
-            height: auto;
-            min-height: 50vh;
-            width: 100%;
-        }
-    }
-
-    .fullscreen-bg {
-        backdrop-filter: blur(6px);
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100vh;
-        width: 100vw;
-        background-color: rgba(0, 0, 0, 0.9);
-    }
-
-    button {
-        border: none;
-        background: none;
-        margin: 0;
-        padding: 0;
-        z-index: 999;
-        position: absolute;
-        cursor: pointer;
-        outline: none;
-        transition: ease 0.2s;
-
-        svg {
-            stroke: rgba(50, 50, 50, 0.5);
-        }
-    }
-}
-
-.previous,
-.next {
-    top: 50%;
-    transform: translateY(-50%);
-    width: 2.5rem;
-
-    &:hover {
-        transform: translateY(-50%) scale(1.15);
-    }
-}
-
-.previous {
-    left: 1rem;
-}
-
-.next {
-    right: 1rem;
-}
-
-.close {
-    top: 1rem;
-    right: 1rem;
-    width: 2rem;
+    // }
 }
 
 footer {
